bg-fixed align for about

--- a/css/main.css
+++ b/css/main.css
@@ -990,24 +990,14 @@ video {
   border-bottom-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
 
-.border-t-gray-200{
-  --tw-border-opacity: 1;
-  border-top-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
-
-.border-b-gray-300{
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
-.border-b-black{
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
 .border-b-slate-200{
   --tw-border-opacity: 1;
   border-bottom-color: rgb(226 232 240 / var(--tw-border-opacity));
+}
+
+.border-t-gray-200{
+  --tw-border-opacity: 1;
+  border-top-color: rgb(229 231 235 / var(--tw-border-opacity));
 }
 
 .bg-white{
@@ -1039,9 +1029,9 @@ video {
   background-color: rgb(36 36 36 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#eeefef\]{
+.bg-\[\#efeeee\]{
   --tw-bg-opacity: 1;
-  background-color: rgb(238 239 239 / var(--tw-bg-opacity));
+  background-color: rgb(239 238 238 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100{
@@ -1052,6 +1042,36 @@ video {
 .bg-accent{
   --tw-bg-opacity: 1;
   background-color: rgb(1 211 175 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#eeefef\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 239 239 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#ECF9FF\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 249 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#EEEEEE\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 238 238 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#FAF7F0\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 247 240 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#F9F9F9\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 249 249 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f8f8f8\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 248 248 / var(--tw-bg-opacity));
 }
 
 .object-contain{
@@ -1137,9 +1157,9 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.px-56{
-  padding-left: 14rem;
-  padding-right: 14rem;
+.px-36{
+  padding-left: 9rem;
+  padding-right: 9rem;
 }
 
 .px-12{
@@ -1150,16 +1170,6 @@ video {
 .py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
-}
-
-.px-24{
-  padding-left: 6rem;
-  padding-right: 6rem;
-}
-
-.px-36{
-  padding-left: 9rem;
-  padding-right: 9rem;
 }
 
 .pt-4{
